@@ -67,6 +67,9 @@ want this header added.
 to see if they are valid.  If <tt>$LOOKUP_SECRET</tt> is set, its value
 is sent as a single credential to the CVM.</tt>
 
+<li>Supports RFC 1870 SMTP Service Extension for Message Size
+Declaration.
+
 </ul></p>
 
 <h2>Back Ends</h2>
