@@ -1,0 +1,22 @@
+DATABYTES=123 sfecho <<EOF
+EHLO hostname
+MAIL FROM:<somebody>
+MAIL FROM:<somebody> SIZE
+MAIL FROM:<somebody> SIZE=
+MAIL FROM:<somebody> SIZE=100
+MAIL FROM:<somebody> SIZE=123
+MAIL FROM:<somebody> SIZE=124
+RCPT TO:<nobody@nowhere>
+EOF
+<result>
+250-unknown^M
+250-SIZE 123^M
+250-8BITMIME^M
+250 PIPELINING^M
+250 Sender='somebody'.^M
+250 Sender='somebody'.^M
+250 Sender='somebody'.^M
+250 Sender='somebody'.^M
+250 Sender='somebody'.^M
+552 The message would exceed the maximum message size.^M
+503 You must send MAIL FROM: first^M
